# src/middlewares/error-handler.ts
@@ -1,18 +1,26 @@
 import { NextFunction, Request, Response } from 'express';
 
-export function defaultErrorHandler(err: Error, req: Request, res: Response, next: NextFunction) {
-	// UK check err
+export function defaultErrorHandler(err: IdGenerationError, req: Request, res: Response, next: NextFunction) {
 
 	if (res.headersSent) {
 		return next(err);
 	}
-	res.status(500).json({
-		status: 'error',
-		message: 'Error while getting id for entity type: ' + req.params.entityType + ' -- ' + err,
+
+	res.json({
+		status: err.name,
+		message: err.message+' - '+req.params.entityType,
+		code: res.statusCode
 	});
 }
 
+
 export class IdGenerationError extends Error {
+	constructor(message: string) {
+		super(message);
+	}
+}
+
+export class InvalidEntityError extends IdGenerationError {
 	constructor(message: string) {
 		super(message);
 	}
