# src/resources/swagger.yaml
@@ -9,7 +9,7 @@ paths:
     get:
       tags:
         - Central Id
-      summary: Get ARGO ID for any entity given program and submitter_sample_id
+      summary: Get or create ARGO ID for any entity given program and submitter_sample_id
       parameters:
         - $ref: '#/components/parameters/PathProgramId'
         - $ref: '#/components/parameters/PathSubmitterId'
@@ -22,6 +22,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Entity'
+        '400':
+          description: 'Invalid Entity Error.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/responses/IdGenerationError'
+  /{programId}/{submitterId}/{someOtherColumn}/{entityType}/find:
+    get:
+      tags:
+        - Central Id
+      summary: Get an existing ARGO ID for any entity given program and submitter_sample_id
+      parameters:
+        - $ref: '#/components/parameters/PathProgramId'
+        - $ref: '#/components/parameters/PathSubmitterId'
+        - $ref: '#/components/parameters/PathEntityType'
+        - $ref: '#/components/parameters/PathSomeCol'
+      responses:
+        '200':
+          description: 'Return an existing argo id.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Entity'
+        '400':
+          description: 'Invalid Entity Error.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/responses/IdGenerationError'
 
 servers:
   - url: /
@@ -32,44 +61,34 @@ components:
       name: programId
       description: Short Name of the program (ex. ABCD-EF)
       in: path
-      required: true
+      required: false
       schema:
         type: string
     PathSubmitterId:
       name: submitterId
       description: Submitter Id of the entity
       in: path
-      required: true
+      required: false
       schema:
         type: string
     PathEntityType:
       name: entityType
       description: Entity Type of the entity
       in: path
-      required: true
+      required: false
       schema:
         type: string
     PathSomeCol:
       name: someOtherColumn
       description: someOtherColumn of the entity
       in: path
-      required: true
+      required: false
       schema:
         type: string
 
   responses:
-    ServiceUnavailableError:
-      description: Endpoint service unavailable
-    UnauthorizedError:
-      description: Access token is missing or invalid
-    ServerError:
-      description: Server error
-    ForbiddenError:
-      description: Access token has incorrect scopes
-    NotFoundError:
-      description: Requested resource was not found
-    FileStructureError:
-      description: File structure couldn't be parsed correctly, or has an invalid filename
+    IdGenerationError:
+      description: Entity type in the request not present in the list of entities
       content:
         application/json:
           schema:
@@ -79,16 +98,9 @@ components:
                 type: string
               code:
                 type: string
-                enum: ['TSV_PARSING_FAILED', 'INVALID_FILE_NAME']
-          examples:
-            TSVParseError:
-              value:
-                msg: 'string'
-                code: 'TSV_PARSING_FAILED'
-            InvalidFileNameError:
-              value:
-                msg: 'string'
-                code: 'INVALID_FILE_NAME'
+                enum: [ 'INVALID_ENTITY']
+              status:
+                type: string
 
   securitySchemes:
     bearerAuth:
